[tool.poetry]
name = "quinn"
version = "1.0.0"
description = "Pyspark helper methods to maximize developer efficiency"
authors = ["MrPowers <matthewkevinpowers@gmail.com>"]

# Maintainers of the project
maintainers = [
    "SemyonSinchenko <ssinchenko@apache.org>"
]

readme = "README.md"
homepage = "https://github.com/MrPowers/quinn/"
keywords = ['apachespark', 'spark', 'pyspark']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

###########################################################################
#                         MAIN DEPENDENCIES
###########################################################################

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

# Below are the optional dependencies
pyarrow = "13.0.0"
pandas = { version = "^1.5.3", optional = true }
numpy = { version = "^1.21.0", optional = true }
grpcio = { version = "^1.48.1", optional = true }
grpcio-status = { version = "^1.64.1", optional = true }

[tool.poetry.extras]
connect = ["pyarrow", "pandas", "numpy", "grpcio", "grpcio-status"]

###########################################################################
#                         DEPENDENCY GROUPS 
###########################################################################

[tool.poetry.group.development]
optional = true

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.development.dependencies]
pyspark = ">3"
semver = "^3"
pre-commit = "*"

[tool.poetry.group.testing.dependencies]
pytest = "^7"
chispa = "^0.10"
pytest-describe = "^2"
pyspark = ">3"
semver = "^3"

[tool.poetry.group.docs.dependencies]
# All the dependencies related to mkdocs;
# We are pinning only the main version of mkdocs.
mkdocstrings-python = "*"
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
mkdocs-section-index = "*"
markdown-include = "*"
mkdocs = "^1.6"
jupyterlab = "*"
mkdocs-jupyter = "*"
mkdocs-material = "*"
pymdown-extensions = "*"
mkdocs-macros-plugin = "*"
mkdocs-material-extensions = "*"
markdown-exec = "*"

###########################################################################
#                         LINTING CONFIGURATION 
###########################################################################


[tool.ruff]
line-length = 150
fix = true
extend-exclude = ["tests", "docs"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D203",    # Ignore blank line before summary of class
    "D213",    # Ignore multiline summary second line
    "T201",    # Allow print() in code.
    "D401",    # Docstrings should be in imperative modes
    "D404",    # Boring thing about how to write docsrings
    "FBT001",  # Boolean positional arg is OK
    "FBT002",  # Boolean default arg value is OK
    "D205",    # It is broken
    "TCH003",  # I have no idea what is it about
    "PLC1901", # Strange thing
    "SIM108",  # Don't create long ternary operators
    "PTH123",  # Don't force use of Pathlib
    "PTH207",  # Don't force use of Pathlib
    "PTH113",  # Don't force use of Pathlib
    "ISC001",  # Recommended by Ruff
    "COM812",  # Recommended by Ruff
]

[tool.ruff.lint.per-file-ignores]
"quinn/__init__.py" = ["F401", "F403"]
"quinn/functions.py" = ["FBT003"]
"quinn/keyword_finder.py" = ["A002"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]